# ray-tracer

./: Cargo.toml  README.md
src/: aabb.rs  base.rs  camera.rs  color.rs  hittable.rs  main.rs  random.rs  ray.rs  scenes.rs  vec3.rs  worlds.rs
src/hit/: bvh.rs  constant_medium.rs  hit_record.rs  mod.rs  rectangle.rs  sphere.rs  transform.rs
src/materials/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs  textures.rs
