[package]
name = "ray_tracing"
version = "0.1.0"
authors = ["Jonathan Papineau <dev@jontech.app>"]
edition = "2021"
description = "Ray-Tracer Engine"

[profile.release]
debug = true

[dependencies]
cgmath = "0.18.0"
clap = "2.33.3"
rand = {version = "0.8.0", features = ["small_rng"]}
rayon = "1.5"
itertools = "0.10.1"
indicatif = {version = "0.16.0", features = ["rayon"]}
png = "0.17"
